// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AppListingTab should match a snapshot 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="ecbqyq6-el-snack-holder"
      />
      <p
        class="e11jaxfn-el-has-grey-text e1wasvgh-el-body-text"
      >
        The detail included on this page populates your app listing in the AppMarket. While you are in development, you can complete this in your own time however, when you are ready to submit your app for approval, it all needs to be completed.
      </p>
      <p
        class="e11jaxfn-el-has-grey-text etrchfm-el-has-section-margin e1wasvgh-el-body-text"
      >
        For information on listing your app 
        <a>
          see here
        </a>
        . If you are looking for guidance on what we look for when reviewing app, there is a dedicated page
         
        <a>
          here.
        </a>
      </p>
      <div
        class="e1fwulnz-el-form-layout-has-margin ee6e7by-el-form-layout"
      >
        <div
          class="ep31he9-el-input-wrap-full"
        >
          <div
            class="e1979rmu-el-input-group"
          >
            <input
              class="e1urjlvd-el-input"
              id="test-static-id"
              name="name"
              placeholder="The name of your app as it will appear to users"
              type="text"
            />
            <label
              class="e1nbkkrq-el-label"
              for="test-static-id"
            >
              Name
            </label>
          </div>
        </div>
        <div
          class="e1ksxx4v-el-input-wrap"
        >
          <div
            class="e1979rmu-el-input-group"
          >
            <input
              class="e1urjlvd-el-input"
              id="test-static-id"
              name="supportEmail"
              placeholder="Email for customers to contact you"
              type="email"
              value="Mock field value"
            />
            <label
              class="e1nbkkrq-el-label"
              for="test-static-id"
            >
              Support email
            </label>
          </div>
        </div>
        <div
          class="e1ksxx4v-el-input-wrap"
        >
          <div
            class="e1979rmu-el-input-group"
          >
            <input
              class="e1urjlvd-el-input"
              id="test-static-id"
              name="telephone"
              placeholder="Number for customers to contact you"
              type="text"
              value="Mock field value"
            />
            <label
              class="e1nbkkrq-el-label"
              for="test-static-id"
            >
              Telephone
            </label>
          </div>
        </div>
        <div
          class="e1ksxx4v-el-input-wrap"
        >
          <div
            class="e1979rmu-el-input-group"
          >
            <input
              class="e1urjlvd-el-input"
              id="test-static-id"
              name="homePage"
              placeholder="Your company homepage. HTTP:// or HTTPS://"
              type="text"
              value="Mock field value"
            />
            <label
              class="e1nbkkrq-el-label"
              for="test-static-id"
            >
              Home page
            </label>
          </div>
        </div>
        <div
          class="e1ksxx4v-el-input-wrap"
        >
          <div
            class="e1979rmu-el-input-group"
          >
            <input
              class="e1urjlvd-el-input"
              id="test-static-id"
              name="launchUri"
              placeholder="HTTPS or HTTP only for localhost"
              type="text"
              value="Mock field value"
            />
            <label
              class="e1nbkkrq-el-label"
              for="test-static-id"
            >
              Launch URI
            </label>
          </div>
        </div>
        <div
          class="e1ksxx4v-el-input-wrap"
        >
          <div
            class="e1979rmu-el-input-group"
          >
            <input
              class="e1urjlvd-el-input"
              id="test-static-id"
              name="termsAndConditionsUrl"
              placeholder="URL to link to your Terms and Conditions"
              type="text"
              value="Mock field value"
            />
            <label
              class="e1nbkkrq-el-label"
              for="test-static-id"
            >
              Terms and Conditions
            </label>
          </div>
        </div>
        <div
          class="e1ksxx4v-el-input-wrap"
        >
          <div
            class="e1979rmu-el-input-group"
          >
            <input
              class="e1urjlvd-el-input"
              id="test-static-id"
              name="privacyPolicyUrl"
              placeholder="URL to link to your Privacy Policy"
              type="text"
              value="Mock field value"
            />
            <label
              class="e1nbkkrq-el-label"
              for="test-static-id"
            >
              Privacy Policy
            </label>
          </div>
        </div>
        <div
          class="e1ksxx4v-el-input-wrap"
        >
          <div
            class="e1979rmu-el-input-group"
          >
            <input
              class="e1urjlvd-el-input"
              id="test-static-id"
              name="pricingUrl"
              placeholder="URL to link to your Pricing Info"
              type="text"
              value="Mock field value"
            />
            <label
              class="e1nbkkrq-el-label"
              for="test-static-id"
            >
              Pricing Info
            </label>
          </div>
        </div>
        <div
          class="e1ksxx4v-el-input-wrap"
        >
          <div
            class="e1979rmu-el-input-group"
          >
            <input
              class="e1urjlvd-el-input"
              id="test-static-id"
              name="isFree"
              type="checkbox"
              value="Mock field value"
            />
            <label
              class="e1nbkkrq-el-label"
              for="test-static-id"
            >
              This application is free
            </label>
          </div>
        </div>
        <div
          class="e1ksxx4v-el-input-wrap"
        >
          <div
            class="e1979rmu-el-input-group"
          >
            <label
              class="e1nbkkrq-el-label"
            >
              Category
            </label>
            <select
              class="e60u3kb-el-select"
            >
              <option
                value=""
              >
                Select Option
              </option>
              <option
                value="MOCK_ID"
              >
                MOCK_DESCRIPTION
              </option>
            </select>
          </div>
        </div>
        <div
          class="ep31he9-el-input-wrap-full"
        >
          <div
            class="e1979rmu-el-input-group"
          >
            <input
              class="e1urjlvd-el-input"
              id="test-static-id"
              name="summary"
              placeholder="A short strapline summary for your app listing. Must be between 50 and 150 characters"
              value="Mock field value"
            />
            <label
              class="e1nbkkrq-el-label"
              for="test-static-id"
            >
              Summary
            </label>
          </div>
        </div>
        <div
          class="ep31he9-el-input-wrap-full"
        >
          <label
            class="e1nbkkrq-el-label"
          >
            Description
          </label>
          <div />
        </div>
        <div
          class="e1ksxx4v-el-input-wrap"
        >
          <div />
        </div>
        <div
          class="e1ksxx4v-el-input-wrap"
        >
          <div />
        </div>
        <div
          class="e1ksxx4v-el-input-wrap"
        >
          <div />
        </div>
        <div
          class="e1ksxx4v-el-input-wrap"
        >
          <div />
        </div>
        <div
          class="e1ksxx4v-el-input-wrap"
        >
          <div />
        </div>
        <div
          class="e1ksxx4v-el-input-wrap"
        >
          <div />
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="ecbqyq6-el-snack-holder"
    />
    <p
      class="e11jaxfn-el-has-grey-text e1wasvgh-el-body-text"
    >
      The detail included on this page populates your app listing in the AppMarket. While you are in development, you can complete this in your own time however, when you are ready to submit your app for approval, it all needs to be completed.
    </p>
    <p
      class="e11jaxfn-el-has-grey-text etrchfm-el-has-section-margin e1wasvgh-el-body-text"
    >
      For information on listing your app 
      <a>
        see here
      </a>
      . If you are looking for guidance on what we look for when reviewing app, there is a dedicated page
       
      <a>
        here.
      </a>
    </p>
    <div
      class="e1fwulnz-el-form-layout-has-margin ee6e7by-el-form-layout"
    >
      <div
        class="ep31he9-el-input-wrap-full"
      >
        <div
          class="e1979rmu-el-input-group"
        >
          <input
            class="e1urjlvd-el-input"
            id="test-static-id"
            name="name"
            placeholder="The name of your app as it will appear to users"
            type="text"
          />
          <label
            class="e1nbkkrq-el-label"
            for="test-static-id"
          >
            Name
          </label>
        </div>
      </div>
      <div
        class="e1ksxx4v-el-input-wrap"
      >
        <div
          class="e1979rmu-el-input-group"
        >
          <input
            class="e1urjlvd-el-input"
            id="test-static-id"
            name="supportEmail"
            placeholder="Email for customers to contact you"
            type="email"
            value="Mock field value"
          />
          <label
            class="e1nbkkrq-el-label"
            for="test-static-id"
          >
            Support email
          </label>
        </div>
      </div>
      <div
        class="e1ksxx4v-el-input-wrap"
      >
        <div
          class="e1979rmu-el-input-group"
        >
          <input
            class="e1urjlvd-el-input"
            id="test-static-id"
            name="telephone"
            placeholder="Number for customers to contact you"
            type="text"
            value="Mock field value"
          />
          <label
            class="e1nbkkrq-el-label"
            for="test-static-id"
          >
            Telephone
          </label>
        </div>
      </div>
      <div
        class="e1ksxx4v-el-input-wrap"
      >
        <div
          class="e1979rmu-el-input-group"
        >
          <input
            class="e1urjlvd-el-input"
            id="test-static-id"
            name="homePage"
            placeholder="Your company homepage. HTTP:// or HTTPS://"
            type="text"
            value="Mock field value"
          />
          <label
            class="e1nbkkrq-el-label"
            for="test-static-id"
          >
            Home page
          </label>
        </div>
      </div>
      <div
        class="e1ksxx4v-el-input-wrap"
      >
        <div
          class="e1979rmu-el-input-group"
        >
          <input
            class="e1urjlvd-el-input"
            id="test-static-id"
            name="launchUri"
            placeholder="HTTPS or HTTP only for localhost"
            type="text"
            value="Mock field value"
          />
          <label
            class="e1nbkkrq-el-label"
            for="test-static-id"
          >
            Launch URI
          </label>
        </div>
      </div>
      <div
        class="e1ksxx4v-el-input-wrap"
      >
        <div
          class="e1979rmu-el-input-group"
        >
          <input
            class="e1urjlvd-el-input"
            id="test-static-id"
            name="termsAndConditionsUrl"
            placeholder="URL to link to your Terms and Conditions"
            type="text"
            value="Mock field value"
          />
          <label
            class="e1nbkkrq-el-label"
            for="test-static-id"
          >
            Terms and Conditions
          </label>
        </div>
      </div>
      <div
        class="e1ksxx4v-el-input-wrap"
      >
        <div
          class="e1979rmu-el-input-group"
        >
          <input
            class="e1urjlvd-el-input"
            id="test-static-id"
            name="privacyPolicyUrl"
            placeholder="URL to link to your Privacy Policy"
            type="text"
            value="Mock field value"
          />
          <label
            class="e1nbkkrq-el-label"
            for="test-static-id"
          >
            Privacy Policy
          </label>
        </div>
      </div>
      <div
        class="e1ksxx4v-el-input-wrap"
      >
        <div
          class="e1979rmu-el-input-group"
        >
          <input
            class="e1urjlvd-el-input"
            id="test-static-id"
            name="pricingUrl"
            placeholder="URL to link to your Pricing Info"
            type="text"
            value="Mock field value"
          />
          <label
            class="e1nbkkrq-el-label"
            for="test-static-id"
          >
            Pricing Info
          </label>
        </div>
      </div>
      <div
        class="e1ksxx4v-el-input-wrap"
      >
        <div
          class="e1979rmu-el-input-group"
        >
          <input
            class="e1urjlvd-el-input"
            id="test-static-id"
            name="isFree"
            type="checkbox"
            value="Mock field value"
          />
          <label
            class="e1nbkkrq-el-label"
            for="test-static-id"
          >
            This application is free
          </label>
        </div>
      </div>
      <div
        class="e1ksxx4v-el-input-wrap"
      >
        <div
          class="e1979rmu-el-input-group"
        >
          <label
            class="e1nbkkrq-el-label"
          >
            Category
          </label>
          <select
            class="e60u3kb-el-select"
          >
            <option
              value=""
            >
              Select Option
            </option>
            <option
              value="MOCK_ID"
            >
              MOCK_DESCRIPTION
            </option>
          </select>
        </div>
      </div>
      <div
        class="ep31he9-el-input-wrap-full"
      >
        <div
          class="e1979rmu-el-input-group"
        >
          <input
            class="e1urjlvd-el-input"
            id="test-static-id"
            name="summary"
            placeholder="A short strapline summary for your app listing. Must be between 50 and 150 characters"
            value="Mock field value"
          />
          <label
            class="e1nbkkrq-el-label"
            for="test-static-id"
          >
            Summary
          </label>
        </div>
      </div>
      <div
        class="ep31he9-el-input-wrap-full"
      >
        <label
          class="e1nbkkrq-el-label"
        >
          Description
        </label>
        <div />
      </div>
      <div
        class="e1ksxx4v-el-input-wrap"
      >
        <div />
      </div>
      <div
        class="e1ksxx4v-el-input-wrap"
      >
        <div />
      </div>
      <div
        class="e1ksxx4v-el-input-wrap"
      >
        <div />
      </div>
      <div
        class="e1ksxx4v-el-input-wrap"
      >
        <div />
      </div>
      <div
        class="e1ksxx4v-el-input-wrap"
      >
        <div />
      </div>
      <div
        class="e1ksxx4v-el-input-wrap"
      >
        <div />
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`AppListingTab should match a snapshot with errors and messages 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="ecbqyq6-el-snack-holder"
      />
      <p
        class="e11jaxfn-el-has-grey-text e1wasvgh-el-body-text"
      >
        The detail included on this page populates your app listing in the AppMarket. While you are in development, you can complete this in your own time however, when you are ready to submit your app for approval, it all needs to be completed.
      </p>
      <p
        class="e11jaxfn-el-has-grey-text etrchfm-el-has-section-margin e1wasvgh-el-body-text"
      >
        For information on listing your app 
        <a>
          see here
        </a>
        . If you are looking for guidance on what we look for when reviewing app, there is a dedicated page
         
        <a>
          here.
        </a>
      </p>
      <div
        class="e1fwulnz-el-form-layout-has-margin ee6e7by-el-form-layout"
      >
        <div
          class="ep31he9-el-input-wrap-full"
        >
          <div
            class="e1979rmu-el-input-group"
          >
            <input
              class="e1urjlvd-el-input"
              id="test-static-id"
              name="name"
              placeholder="The name of your app as it will appear to users"
              type="text"
            />
            <label
              class="e1nbkkrq-el-label"
              for="test-static-id"
            >
              Name
            </label>
          </div>
        </div>
        <div
          class="e1ksxx4v-el-input-wrap"
        >
          <div
            class="e1979rmu-el-input-group"
          >
            <input
              class="e1urjlvd-el-input"
              id="test-static-id"
              name="supportEmail"
              placeholder="Email for customers to contact you"
              type="email"
            />
            <span
              class="e1vxext9-el-intent-danger ej9yrfo-el-icon"
            >
              <svg
                fill="none"
                height="1em"
                viewBox="0 0 20 20"
                width="1em"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M18.4192 14.0993L11.3203 10.0007L18.4182 5.90272C18.734 5.72042 18.8421 5.31666 18.6598 5.00092C18.4775 4.68519 18.0738 4.57692 17.758 4.7593L10.6596 8.85755V0.660171C10.6596 0.29558 10.364 0 9.99946 0C9.63487 0 9.33929 0.29558 9.33929 0.660171V8.85694L2.24193 4.7593C1.92619 4.57683 1.52243 4.68519 1.34013 5.00092C1.15784 5.31666 1.26602 5.72042 1.58176 5.90272L8.67965 10.0007L1.58079 14.0993C1.26505 14.2816 1.15687 14.6854 1.33916 15.0011C1.46143 15.2129 1.68333 15.3313 1.91149 15.3313C2.02354 15.3313 2.137 15.3028 2.24096 15.2427L9.33938 11.1445V19.3398C9.33938 19.7044 9.63496 20 9.99955 20C10.3641 20 10.6597 19.7044 10.6597 19.3398V11.1439L17.7591 15.2427C17.8631 15.3028 17.9766 15.3313 18.0886 15.3313C18.3167 15.3313 18.5386 15.2128 18.6609 15.0011C18.8432 14.6853 18.735 14.2816 18.4192 14.0993Z"
                  fill="currentColor"
                />
              </svg>
            </span>
            <label
              class="e1nbkkrq-el-label"
              for="test-static-id"
            >
              Support email
            </label>
            <p
              class="e19twfs3-el-input-error"
            >
              An Error
            </p>
          </div>
        </div>
        <div
          class="e1ksxx4v-el-input-wrap"
        >
          <div
            class="e1979rmu-el-input-group"
          >
            <input
              class="e1urjlvd-el-input"
              id="test-static-id"
              name="telephone"
              placeholder="Number for customers to contact you"
              type="text"
            />
            <span
              class="e1vxext9-el-intent-danger ej9yrfo-el-icon"
            >
              <svg
                fill="none"
                height="1em"
                viewBox="0 0 20 20"
                width="1em"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M18.4192 14.0993L11.3203 10.0007L18.4182 5.90272C18.734 5.72042 18.8421 5.31666 18.6598 5.00092C18.4775 4.68519 18.0738 4.57692 17.758 4.7593L10.6596 8.85755V0.660171C10.6596 0.29558 10.364 0 9.99946 0C9.63487 0 9.33929 0.29558 9.33929 0.660171V8.85694L2.24193 4.7593C1.92619 4.57683 1.52243 4.68519 1.34013 5.00092C1.15784 5.31666 1.26602 5.72042 1.58176 5.90272L8.67965 10.0007L1.58079 14.0993C1.26505 14.2816 1.15687 14.6854 1.33916 15.0011C1.46143 15.2129 1.68333 15.3313 1.91149 15.3313C2.02354 15.3313 2.137 15.3028 2.24096 15.2427L9.33938 11.1445V19.3398C9.33938 19.7044 9.63496 20 9.99955 20C10.3641 20 10.6597 19.7044 10.6597 19.3398V11.1439L17.7591 15.2427C17.8631 15.3028 17.9766 15.3313 18.0886 15.3313C18.3167 15.3313 18.5386 15.2128 18.6609 15.0011C18.8432 14.6853 18.735 14.2816 18.4192 14.0993Z"
                  fill="currentColor"
                />
              </svg>
            </span>
            <label
              class="e1nbkkrq-el-label"
              for="test-static-id"
            >
              Telephone
            </label>
            <p
              class="e19twfs3-el-input-error"
            >
              An Error
            </p>
          </div>
        </div>
        <div
          class="e1ksxx4v-el-input-wrap"
        >
          <div
            class="e1979rmu-el-input-group"
          >
            <input
              class="e1urjlvd-el-input"
              id="test-static-id"
              name="homePage"
              placeholder="Your company homepage. HTTP:// or HTTPS://"
              type="text"
            />
            <span
              class="e1vxext9-el-intent-danger ej9yrfo-el-icon"
            >
              <svg
                fill="none"
                height="1em"
                viewBox="0 0 20 20"
                width="1em"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M18.4192 14.0993L11.3203 10.0007L18.4182 5.90272C18.734 5.72042 18.8421 5.31666 18.6598 5.00092C18.4775 4.68519 18.0738 4.57692 17.758 4.7593L10.6596 8.85755V0.660171C10.6596 0.29558 10.364 0 9.99946 0C9.63487 0 9.33929 0.29558 9.33929 0.660171V8.85694L2.24193 4.7593C1.92619 4.57683 1.52243 4.68519 1.34013 5.00092C1.15784 5.31666 1.26602 5.72042 1.58176 5.90272L8.67965 10.0007L1.58079 14.0993C1.26505 14.2816 1.15687 14.6854 1.33916 15.0011C1.46143 15.2129 1.68333 15.3313 1.91149 15.3313C2.02354 15.3313 2.137 15.3028 2.24096 15.2427L9.33938 11.1445V19.3398C9.33938 19.7044 9.63496 20 9.99955 20C10.3641 20 10.6597 19.7044 10.6597 19.3398V11.1439L17.7591 15.2427C17.8631 15.3028 17.9766 15.3313 18.0886 15.3313C18.3167 15.3313 18.5386 15.2128 18.6609 15.0011C18.8432 14.6853 18.735 14.2816 18.4192 14.0993Z"
                  fill="currentColor"
                />
              </svg>
            </span>
            <label
              class="e1nbkkrq-el-label"
              for="test-static-id"
            >
              Home page
            </label>
            <p
              class="e19twfs3-el-input-error"
            >
              An Error
            </p>
          </div>
        </div>
        <div
          class="e1ksxx4v-el-input-wrap"
        >
          <div
            class="e1979rmu-el-input-group"
          >
            <input
              class="e1urjlvd-el-input"
              id="test-static-id"
              name="launchUri"
              placeholder="HTTPS or HTTP only for localhost"
              type="text"
            />
            <span
              class="e1vxext9-el-intent-danger ej9yrfo-el-icon"
            >
              <svg
                fill="none"
                height="1em"
                viewBox="0 0 20 20"
                width="1em"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M18.4192 14.0993L11.3203 10.0007L18.4182 5.90272C18.734 5.72042 18.8421 5.31666 18.6598 5.00092C18.4775 4.68519 18.0738 4.57692 17.758 4.7593L10.6596 8.85755V0.660171C10.6596 0.29558 10.364 0 9.99946 0C9.63487 0 9.33929 0.29558 9.33929 0.660171V8.85694L2.24193 4.7593C1.92619 4.57683 1.52243 4.68519 1.34013 5.00092C1.15784 5.31666 1.26602 5.72042 1.58176 5.90272L8.67965 10.0007L1.58079 14.0993C1.26505 14.2816 1.15687 14.6854 1.33916 15.0011C1.46143 15.2129 1.68333 15.3313 1.91149 15.3313C2.02354 15.3313 2.137 15.3028 2.24096 15.2427L9.33938 11.1445V19.3398C9.33938 19.7044 9.63496 20 9.99955 20C10.3641 20 10.6597 19.7044 10.6597 19.3398V11.1439L17.7591 15.2427C17.8631 15.3028 17.9766 15.3313 18.0886 15.3313C18.3167 15.3313 18.5386 15.2128 18.6609 15.0011C18.8432 14.6853 18.735 14.2816 18.4192 14.0993Z"
                  fill="currentColor"
                />
              </svg>
            </span>
            <label
              class="e1nbkkrq-el-label"
              for="test-static-id"
            >
              Launch URI
            </label>
            <p
              class="e19twfs3-el-input-error"
            >
              An Error
            </p>
          </div>
        </div>
        <div
          class="e1ksxx4v-el-input-wrap"
        >
          <div
            class="e1979rmu-el-input-group"
          >
            <input
              class="e1urjlvd-el-input"
              id="test-static-id"
              name="termsAndConditionsUrl"
              placeholder="URL to link to your Terms and Conditions"
              type="text"
            />
            <span
              class="e1vxext9-el-intent-danger ej9yrfo-el-icon"
            >
              <svg
                fill="none"
                height="1em"
                viewBox="0 0 20 20"
                width="1em"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M18.4192 14.0993L11.3203 10.0007L18.4182 5.90272C18.734 5.72042 18.8421 5.31666 18.6598 5.00092C18.4775 4.68519 18.0738 4.57692 17.758 4.7593L10.6596 8.85755V0.660171C10.6596 0.29558 10.364 0 9.99946 0C9.63487 0 9.33929 0.29558 9.33929 0.660171V8.85694L2.24193 4.7593C1.92619 4.57683 1.52243 4.68519 1.34013 5.00092C1.15784 5.31666 1.26602 5.72042 1.58176 5.90272L8.67965 10.0007L1.58079 14.0993C1.26505 14.2816 1.15687 14.6854 1.33916 15.0011C1.46143 15.2129 1.68333 15.3313 1.91149 15.3313C2.02354 15.3313 2.137 15.3028 2.24096 15.2427L9.33938 11.1445V19.3398C9.33938 19.7044 9.63496 20 9.99955 20C10.3641 20 10.6597 19.7044 10.6597 19.3398V11.1439L17.7591 15.2427C17.8631 15.3028 17.9766 15.3313 18.0886 15.3313C18.3167 15.3313 18.5386 15.2128 18.6609 15.0011C18.8432 14.6853 18.735 14.2816 18.4192 14.0993Z"
                  fill="currentColor"
                />
              </svg>
            </span>
            <label
              class="e1nbkkrq-el-label"
              for="test-static-id"
            >
              Terms and Conditions
            </label>
            <p
              class="e19twfs3-el-input-error"
            >
              An Error
            </p>
          </div>
        </div>
        <div
          class="e1ksxx4v-el-input-wrap"
        >
          <div
            class="e1979rmu-el-input-group"
          >
            <input
              class="e1urjlvd-el-input"
              id="test-static-id"
              name="privacyPolicyUrl"
              placeholder="URL to link to your Privacy Policy"
              type="text"
            />
            <span
              class="e1vxext9-el-intent-danger ej9yrfo-el-icon"
            >
              <svg
                fill="none"
                height="1em"
                viewBox="0 0 20 20"
                width="1em"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M18.4192 14.0993L11.3203 10.0007L18.4182 5.90272C18.734 5.72042 18.8421 5.31666 18.6598 5.00092C18.4775 4.68519 18.0738 4.57692 17.758 4.7593L10.6596 8.85755V0.660171C10.6596 0.29558 10.364 0 9.99946 0C9.63487 0 9.33929 0.29558 9.33929 0.660171V8.85694L2.24193 4.7593C1.92619 4.57683 1.52243 4.68519 1.34013 5.00092C1.15784 5.31666 1.26602 5.72042 1.58176 5.90272L8.67965 10.0007L1.58079 14.0993C1.26505 14.2816 1.15687 14.6854 1.33916 15.0011C1.46143 15.2129 1.68333 15.3313 1.91149 15.3313C2.02354 15.3313 2.137 15.3028 2.24096 15.2427L9.33938 11.1445V19.3398C9.33938 19.7044 9.63496 20 9.99955 20C10.3641 20 10.6597 19.7044 10.6597 19.3398V11.1439L17.7591 15.2427C17.8631 15.3028 17.9766 15.3313 18.0886 15.3313C18.3167 15.3313 18.5386 15.2128 18.6609 15.0011C18.8432 14.6853 18.735 14.2816 18.4192 14.0993Z"
                  fill="currentColor"
                />
              </svg>
            </span>
            <label
              class="e1nbkkrq-el-label"
              for="test-static-id"
            >
              Privacy Policy
            </label>
            <p
              class="e19twfs3-el-input-error"
            >
              An Error
            </p>
          </div>
        </div>
        <div
          class="e1ksxx4v-el-input-wrap"
        >
          <div
            class="e1979rmu-el-input-group"
          >
            <input
              class="e1urjlvd-el-input"
              id="test-static-id"
              name="pricingUrl"
              placeholder="URL to link to your Pricing Info"
              type="text"
            />
            <span
              class="e1vxext9-el-intent-danger ej9yrfo-el-icon"
            >
              <svg
                fill="none"
                height="1em"
                viewBox="0 0 20 20"
                width="1em"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M18.4192 14.0993L11.3203 10.0007L18.4182 5.90272C18.734 5.72042 18.8421 5.31666 18.6598 5.00092C18.4775 4.68519 18.0738 4.57692 17.758 4.7593L10.6596 8.85755V0.660171C10.6596 0.29558 10.364 0 9.99946 0C9.63487 0 9.33929 0.29558 9.33929 0.660171V8.85694L2.24193 4.7593C1.92619 4.57683 1.52243 4.68519 1.34013 5.00092C1.15784 5.31666 1.26602 5.72042 1.58176 5.90272L8.67965 10.0007L1.58079 14.0993C1.26505 14.2816 1.15687 14.6854 1.33916 15.0011C1.46143 15.2129 1.68333 15.3313 1.91149 15.3313C2.02354 15.3313 2.137 15.3028 2.24096 15.2427L9.33938 11.1445V19.3398C9.33938 19.7044 9.63496 20 9.99955 20C10.3641 20 10.6597 19.7044 10.6597 19.3398V11.1439L17.7591 15.2427C17.8631 15.3028 17.9766 15.3313 18.0886 15.3313C18.3167 15.3313 18.5386 15.2128 18.6609 15.0011C18.8432 14.6853 18.735 14.2816 18.4192 14.0993Z"
                  fill="currentColor"
                />
              </svg>
            </span>
            <label
              class="e1nbkkrq-el-label"
              for="test-static-id"
            >
              Pricing Info
            </label>
            <p
              class="e19twfs3-el-input-error"
            >
              An Error
            </p>
          </div>
        </div>
        <div
          class="e1ksxx4v-el-input-wrap"
        >
          <div
            class="e1979rmu-el-input-group"
          >
            <input
              class="e1urjlvd-el-input"
              id="test-static-id"
              name="isFree"
              type="checkbox"
            />
            <span
              class="e1vxext9-el-intent-danger ej9yrfo-el-icon"
            >
              <svg
                fill="none"
                height="1em"
                viewBox="0 0 20 20"
                width="1em"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M18.4192 14.0993L11.3203 10.0007L18.4182 5.90272C18.734 5.72042 18.8421 5.31666 18.6598 5.00092C18.4775 4.68519 18.0738 4.57692 17.758 4.7593L10.6596 8.85755V0.660171C10.6596 0.29558 10.364 0 9.99946 0C9.63487 0 9.33929 0.29558 9.33929 0.660171V8.85694L2.24193 4.7593C1.92619 4.57683 1.52243 4.68519 1.34013 5.00092C1.15784 5.31666 1.26602 5.72042 1.58176 5.90272L8.67965 10.0007L1.58079 14.0993C1.26505 14.2816 1.15687 14.6854 1.33916 15.0011C1.46143 15.2129 1.68333 15.3313 1.91149 15.3313C2.02354 15.3313 2.137 15.3028 2.24096 15.2427L9.33938 11.1445V19.3398C9.33938 19.7044 9.63496 20 9.99955 20C10.3641 20 10.6597 19.7044 10.6597 19.3398V11.1439L17.7591 15.2427C17.8631 15.3028 17.9766 15.3313 18.0886 15.3313C18.3167 15.3313 18.5386 15.2128 18.6609 15.0011C18.8432 14.6853 18.735 14.2816 18.4192 14.0993Z"
                  fill="currentColor"
                />
              </svg>
            </span>
            <label
              class="e1nbkkrq-el-label"
              for="test-static-id"
            >
              This application is free
            </label>
            <p
              class="e19twfs3-el-input-error"
            >
              An Error
            </p>
          </div>
        </div>
        <div
          class="e1ksxx4v-el-input-wrap"
        >
          <div
            class="e1979rmu-el-input-group"
          >
            <label
              class="e1nbkkrq-el-label"
            >
              Category
            </label>
            <select
              class="e60u3kb-el-select"
            >
              <option
                value=""
              >
                Select Option
              </option>
              <option
                value="MOCK_ID"
              >
                MOCK_DESCRIPTION
              </option>
            </select>
            <p
              class="e19twfs3-el-input-error"
            >
              An Error
            </p>
          </div>
        </div>
        <div
          class="ep31he9-el-input-wrap-full"
        >
          <div
            class="e1979rmu-el-input-group"
          >
            <input
              class="e1urjlvd-el-input"
              id="test-static-id"
              name="summary"
              placeholder="A short strapline summary for your app listing. Must be between 50 and 150 characters"
            />
            <span
              class="e1vxext9-el-intent-danger ej9yrfo-el-icon"
            >
              <svg
                fill="none"
                height="1em"
                viewBox="0 0 20 20"
                width="1em"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M18.4192 14.0993L11.3203 10.0007L18.4182 5.90272C18.734 5.72042 18.8421 5.31666 18.6598 5.00092C18.4775 4.68519 18.0738 4.57692 17.758 4.7593L10.6596 8.85755V0.660171C10.6596 0.29558 10.364 0 9.99946 0C9.63487 0 9.33929 0.29558 9.33929 0.660171V8.85694L2.24193 4.7593C1.92619 4.57683 1.52243 4.68519 1.34013 5.00092C1.15784 5.31666 1.26602 5.72042 1.58176 5.90272L8.67965 10.0007L1.58079 14.0993C1.26505 14.2816 1.15687 14.6854 1.33916 15.0011C1.46143 15.2129 1.68333 15.3313 1.91149 15.3313C2.02354 15.3313 2.137 15.3028 2.24096 15.2427L9.33938 11.1445V19.3398C9.33938 19.7044 9.63496 20 9.99955 20C10.3641 20 10.6597 19.7044 10.6597 19.3398V11.1439L17.7591 15.2427C17.8631 15.3028 17.9766 15.3313 18.0886 15.3313C18.3167 15.3313 18.5386 15.2128 18.6609 15.0011C18.8432 14.6853 18.735 14.2816 18.4192 14.0993Z"
                  fill="currentColor"
                />
              </svg>
            </span>
            <label
              class="e1nbkkrq-el-label"
              for="test-static-id"
            >
              Summary
            </label>
            <p
              class="e19twfs3-el-input-error"
            >
              An Error
            </p>
          </div>
        </div>
        <div
          class="ep31he9-el-input-wrap-full"
        >
          <label
            class="e1nbkkrq-el-label"
          >
            Description
          </label>
          <div />
          <p
            class="e19twfs3-el-input-error"
          >
            An Error
          </p>
        </div>
        <div
          class="e1ksxx4v-el-input-wrap"
        >
          <div />
          <p
            class="e19twfs3-el-input-error"
          >
            An Error
          </p>
        </div>
        <div
          class="e1ksxx4v-el-input-wrap"
        >
          <div />
          <p
            class="e19twfs3-el-input-error"
          >
            An Error
          </p>
        </div>
        <div
          class="e1ksxx4v-el-input-wrap"
        >
          <div />
          <p
            class="e19twfs3-el-input-error"
          >
            An Error
          </p>
        </div>
        <div
          class="e1ksxx4v-el-input-wrap"
        >
          <div />
          <p
            class="e19twfs3-el-input-error"
          >
            An Error
          </p>
        </div>
        <div
          class="e1ksxx4v-el-input-wrap"
        >
          <div />
          <p
            class="e19twfs3-el-input-error"
          >
            An Error
          </p>
        </div>
        <div
          class="e1ksxx4v-el-input-wrap"
        >
          <div />
          <p
            class="e19twfs3-el-input-error"
          >
            An Error
          </p>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="ecbqyq6-el-snack-holder"
    />
    <p
      class="e11jaxfn-el-has-grey-text e1wasvgh-el-body-text"
    >
      The detail included on this page populates your app listing in the AppMarket. While you are in development, you can complete this in your own time however, when you are ready to submit your app for approval, it all needs to be completed.
    </p>
    <p
      class="e11jaxfn-el-has-grey-text etrchfm-el-has-section-margin e1wasvgh-el-body-text"
    >
      For information on listing your app 
      <a>
        see here
      </a>
      . If you are looking for guidance on what we look for when reviewing app, there is a dedicated page
       
      <a>
        here.
      </a>
    </p>
    <div
      class="e1fwulnz-el-form-layout-has-margin ee6e7by-el-form-layout"
    >
      <div
        class="ep31he9-el-input-wrap-full"
      >
        <div
          class="e1979rmu-el-input-group"
        >
          <input
            class="e1urjlvd-el-input"
            id="test-static-id"
            name="name"
            placeholder="The name of your app as it will appear to users"
            type="text"
          />
          <label
            class="e1nbkkrq-el-label"
            for="test-static-id"
          >
            Name
          </label>
        </div>
      </div>
      <div
        class="e1ksxx4v-el-input-wrap"
      >
        <div
          class="e1979rmu-el-input-group"
        >
          <input
            class="e1urjlvd-el-input"
            id="test-static-id"
            name="supportEmail"
            placeholder="Email for customers to contact you"
            type="email"
          />
          <span
            class="e1vxext9-el-intent-danger ej9yrfo-el-icon"
          >
            <svg
              fill="none"
              height="1em"
              viewBox="0 0 20 20"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M18.4192 14.0993L11.3203 10.0007L18.4182 5.90272C18.734 5.72042 18.8421 5.31666 18.6598 5.00092C18.4775 4.68519 18.0738 4.57692 17.758 4.7593L10.6596 8.85755V0.660171C10.6596 0.29558 10.364 0 9.99946 0C9.63487 0 9.33929 0.29558 9.33929 0.660171V8.85694L2.24193 4.7593C1.92619 4.57683 1.52243 4.68519 1.34013 5.00092C1.15784 5.31666 1.26602 5.72042 1.58176 5.90272L8.67965 10.0007L1.58079 14.0993C1.26505 14.2816 1.15687 14.6854 1.33916 15.0011C1.46143 15.2129 1.68333 15.3313 1.91149 15.3313C2.02354 15.3313 2.137 15.3028 2.24096 15.2427L9.33938 11.1445V19.3398C9.33938 19.7044 9.63496 20 9.99955 20C10.3641 20 10.6597 19.7044 10.6597 19.3398V11.1439L17.7591 15.2427C17.8631 15.3028 17.9766 15.3313 18.0886 15.3313C18.3167 15.3313 18.5386 15.2128 18.6609 15.0011C18.8432 14.6853 18.735 14.2816 18.4192 14.0993Z"
                fill="currentColor"
              />
            </svg>
          </span>
          <label
            class="e1nbkkrq-el-label"
            for="test-static-id"
          >
            Support email
          </label>
          <p
            class="e19twfs3-el-input-error"
          >
            An Error
          </p>
        </div>
      </div>
      <div
        class="e1ksxx4v-el-input-wrap"
      >
        <div
          class="e1979rmu-el-input-group"
        >
          <input
            class="e1urjlvd-el-input"
            id="test-static-id"
            name="telephone"
            placeholder="Number for customers to contact you"
            type="text"
          />
          <span
            class="e1vxext9-el-intent-danger ej9yrfo-el-icon"
          >
            <svg
              fill="none"
              height="1em"
              viewBox="0 0 20 20"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M18.4192 14.0993L11.3203 10.0007L18.4182 5.90272C18.734 5.72042 18.8421 5.31666 18.6598 5.00092C18.4775 4.68519 18.0738 4.57692 17.758 4.7593L10.6596 8.85755V0.660171C10.6596 0.29558 10.364 0 9.99946 0C9.63487 0 9.33929 0.29558 9.33929 0.660171V8.85694L2.24193 4.7593C1.92619 4.57683 1.52243 4.68519 1.34013 5.00092C1.15784 5.31666 1.26602 5.72042 1.58176 5.90272L8.67965 10.0007L1.58079 14.0993C1.26505 14.2816 1.15687 14.6854 1.33916 15.0011C1.46143 15.2129 1.68333 15.3313 1.91149 15.3313C2.02354 15.3313 2.137 15.3028 2.24096 15.2427L9.33938 11.1445V19.3398C9.33938 19.7044 9.63496 20 9.99955 20C10.3641 20 10.6597 19.7044 10.6597 19.3398V11.1439L17.7591 15.2427C17.8631 15.3028 17.9766 15.3313 18.0886 15.3313C18.3167 15.3313 18.5386 15.2128 18.6609 15.0011C18.8432 14.6853 18.735 14.2816 18.4192 14.0993Z"
                fill="currentColor"
              />
            </svg>
          </span>
          <label
            class="e1nbkkrq-el-label"
            for="test-static-id"
          >
            Telephone
          </label>
          <p
            class="e19twfs3-el-input-error"
          >
            An Error
          </p>
        </div>
      </div>
      <div
        class="e1ksxx4v-el-input-wrap"
      >
        <div
          class="e1979rmu-el-input-group"
        >
          <input
            class="e1urjlvd-el-input"
            id="test-static-id"
            name="homePage"
            placeholder="Your company homepage. HTTP:// or HTTPS://"
            type="text"
          />
          <span
            class="e1vxext9-el-intent-danger ej9yrfo-el-icon"
          >
            <svg
              fill="none"
              height="1em"
              viewBox="0 0 20 20"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M18.4192 14.0993L11.3203 10.0007L18.4182 5.90272C18.734 5.72042 18.8421 5.31666 18.6598 5.00092C18.4775 4.68519 18.0738 4.57692 17.758 4.7593L10.6596 8.85755V0.660171C10.6596 0.29558 10.364 0 9.99946 0C9.63487 0 9.33929 0.29558 9.33929 0.660171V8.85694L2.24193 4.7593C1.92619 4.57683 1.52243 4.68519 1.34013 5.00092C1.15784 5.31666 1.26602 5.72042 1.58176 5.90272L8.67965 10.0007L1.58079 14.0993C1.26505 14.2816 1.15687 14.6854 1.33916 15.0011C1.46143 15.2129 1.68333 15.3313 1.91149 15.3313C2.02354 15.3313 2.137 15.3028 2.24096 15.2427L9.33938 11.1445V19.3398C9.33938 19.7044 9.63496 20 9.99955 20C10.3641 20 10.6597 19.7044 10.6597 19.3398V11.1439L17.7591 15.2427C17.8631 15.3028 17.9766 15.3313 18.0886 15.3313C18.3167 15.3313 18.5386 15.2128 18.6609 15.0011C18.8432 14.6853 18.735 14.2816 18.4192 14.0993Z"
                fill="currentColor"
              />
            </svg>
          </span>
          <label
            class="e1nbkkrq-el-label"
            for="test-static-id"
          >
            Home page
          </label>
          <p
            class="e19twfs3-el-input-error"
          >
            An Error
          </p>
        </div>
      </div>
      <div
        class="e1ksxx4v-el-input-wrap"
      >
        <div
          class="e1979rmu-el-input-group"
        >
          <input
            class="e1urjlvd-el-input"
            id="test-static-id"
            name="launchUri"
            placeholder="HTTPS or HTTP only for localhost"
            type="text"
          />
          <span
            class="e1vxext9-el-intent-danger ej9yrfo-el-icon"
          >
            <svg
              fill="none"
              height="1em"
              viewBox="0 0 20 20"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M18.4192 14.0993L11.3203 10.0007L18.4182 5.90272C18.734 5.72042 18.8421 5.31666 18.6598 5.00092C18.4775 4.68519 18.0738 4.57692 17.758 4.7593L10.6596 8.85755V0.660171C10.6596 0.29558 10.364 0 9.99946 0C9.63487 0 9.33929 0.29558 9.33929 0.660171V8.85694L2.24193 4.7593C1.92619 4.57683 1.52243 4.68519 1.34013 5.00092C1.15784 5.31666 1.26602 5.72042 1.58176 5.90272L8.67965 10.0007L1.58079 14.0993C1.26505 14.2816 1.15687 14.6854 1.33916 15.0011C1.46143 15.2129 1.68333 15.3313 1.91149 15.3313C2.02354 15.3313 2.137 15.3028 2.24096 15.2427L9.33938 11.1445V19.3398C9.33938 19.7044 9.63496 20 9.99955 20C10.3641 20 10.6597 19.7044 10.6597 19.3398V11.1439L17.7591 15.2427C17.8631 15.3028 17.9766 15.3313 18.0886 15.3313C18.3167 15.3313 18.5386 15.2128 18.6609 15.0011C18.8432 14.6853 18.735 14.2816 18.4192 14.0993Z"
                fill="currentColor"
              />
            </svg>
          </span>
          <label
            class="e1nbkkrq-el-label"
            for="test-static-id"
          >
            Launch URI
          </label>
          <p
            class="e19twfs3-el-input-error"
          >
            An Error
          </p>
        </div>
      </div>
      <div
        class="e1ksxx4v-el-input-wrap"
      >
        <div
          class="e1979rmu-el-input-group"
        >
          <input
            class="e1urjlvd-el-input"
            id="test-static-id"
            name="termsAndConditionsUrl"
            placeholder="URL to link to your Terms and Conditions"
            type="text"
          />
          <span
            class="e1vxext9-el-intent-danger ej9yrfo-el-icon"
          >
            <svg
              fill="none"
              height="1em"
              viewBox="0 0 20 20"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M18.4192 14.0993L11.3203 10.0007L18.4182 5.90272C18.734 5.72042 18.8421 5.31666 18.6598 5.00092C18.4775 4.68519 18.0738 4.57692 17.758 4.7593L10.6596 8.85755V0.660171C10.6596 0.29558 10.364 0 9.99946 0C9.63487 0 9.33929 0.29558 9.33929 0.660171V8.85694L2.24193 4.7593C1.92619 4.57683 1.52243 4.68519 1.34013 5.00092C1.15784 5.31666 1.26602 5.72042 1.58176 5.90272L8.67965 10.0007L1.58079 14.0993C1.26505 14.2816 1.15687 14.6854 1.33916 15.0011C1.46143 15.2129 1.68333 15.3313 1.91149 15.3313C2.02354 15.3313 2.137 15.3028 2.24096 15.2427L9.33938 11.1445V19.3398C9.33938 19.7044 9.63496 20 9.99955 20C10.3641 20 10.6597 19.7044 10.6597 19.3398V11.1439L17.7591 15.2427C17.8631 15.3028 17.9766 15.3313 18.0886 15.3313C18.3167 15.3313 18.5386 15.2128 18.6609 15.0011C18.8432 14.6853 18.735 14.2816 18.4192 14.0993Z"
                fill="currentColor"
              />
            </svg>
          </span>
          <label
            class="e1nbkkrq-el-label"
            for="test-static-id"
          >
            Terms and Conditions
          </label>
          <p
            class="e19twfs3-el-input-error"
          >
            An Error
          </p>
        </div>
      </div>
      <div
        class="e1ksxx4v-el-input-wrap"
      >
        <div
          class="e1979rmu-el-input-group"
        >
          <input
            class="e1urjlvd-el-input"
            id="test-static-id"
            name="privacyPolicyUrl"
            placeholder="URL to link to your Privacy Policy"
            type="text"
          />
          <span
            class="e1vxext9-el-intent-danger ej9yrfo-el-icon"
          >
            <svg
              fill="none"
              height="1em"
              viewBox="0 0 20 20"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M18.4192 14.0993L11.3203 10.0007L18.4182 5.90272C18.734 5.72042 18.8421 5.31666 18.6598 5.00092C18.4775 4.68519 18.0738 4.57692 17.758 4.7593L10.6596 8.85755V0.660171C10.6596 0.29558 10.364 0 9.99946 0C9.63487 0 9.33929 0.29558 9.33929 0.660171V8.85694L2.24193 4.7593C1.92619 4.57683 1.52243 4.68519 1.34013 5.00092C1.15784 5.31666 1.26602 5.72042 1.58176 5.90272L8.67965 10.0007L1.58079 14.0993C1.26505 14.2816 1.15687 14.6854 1.33916 15.0011C1.46143 15.2129 1.68333 15.3313 1.91149 15.3313C2.02354 15.3313 2.137 15.3028 2.24096 15.2427L9.33938 11.1445V19.3398C9.33938 19.7044 9.63496 20 9.99955 20C10.3641 20 10.6597 19.7044 10.6597 19.3398V11.1439L17.7591 15.2427C17.8631 15.3028 17.9766 15.3313 18.0886 15.3313C18.3167 15.3313 18.5386 15.2128 18.6609 15.0011C18.8432 14.6853 18.735 14.2816 18.4192 14.0993Z"
                fill="currentColor"
              />
            </svg>
          </span>
          <label
            class="e1nbkkrq-el-label"
            for="test-static-id"
          >
            Privacy Policy
          </label>
          <p
            class="e19twfs3-el-input-error"
          >
            An Error
          </p>
        </div>
      </div>
      <div
        class="e1ksxx4v-el-input-wrap"
      >
        <div
          class="e1979rmu-el-input-group"
        >
          <input
            class="e1urjlvd-el-input"
            id="test-static-id"
            name="pricingUrl"
            placeholder="URL to link to your Pricing Info"
            type="text"
          />
          <span
            class="e1vxext9-el-intent-danger ej9yrfo-el-icon"
          >
            <svg
              fill="none"
              height="1em"
              viewBox="0 0 20 20"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M18.4192 14.0993L11.3203 10.0007L18.4182 5.90272C18.734 5.72042 18.8421 5.31666 18.6598 5.00092C18.4775 4.68519 18.0738 4.57692 17.758 4.7593L10.6596 8.85755V0.660171C10.6596 0.29558 10.364 0 9.99946 0C9.63487 0 9.33929 0.29558 9.33929 0.660171V8.85694L2.24193 4.7593C1.92619 4.57683 1.52243 4.68519 1.34013 5.00092C1.15784 5.31666 1.26602 5.72042 1.58176 5.90272L8.67965 10.0007L1.58079 14.0993C1.26505 14.2816 1.15687 14.6854 1.33916 15.0011C1.46143 15.2129 1.68333 15.3313 1.91149 15.3313C2.02354 15.3313 2.137 15.3028 2.24096 15.2427L9.33938 11.1445V19.3398C9.33938 19.7044 9.63496 20 9.99955 20C10.3641 20 10.6597 19.7044 10.6597 19.3398V11.1439L17.7591 15.2427C17.8631 15.3028 17.9766 15.3313 18.0886 15.3313C18.3167 15.3313 18.5386 15.2128 18.6609 15.0011C18.8432 14.6853 18.735 14.2816 18.4192 14.0993Z"
                fill="currentColor"
              />
            </svg>
          </span>
          <label
            class="e1nbkkrq-el-label"
            for="test-static-id"
          >
            Pricing Info
          </label>
          <p
            class="e19twfs3-el-input-error"
          >
            An Error
          </p>
        </div>
      </div>
      <div
        class="e1ksxx4v-el-input-wrap"
      >
        <div
          class="e1979rmu-el-input-group"
        >
          <input
            class="e1urjlvd-el-input"
            id="test-static-id"
            name="isFree"
            type="checkbox"
          />
          <span
            class="e1vxext9-el-intent-danger ej9yrfo-el-icon"
          >
            <svg
              fill="none"
              height="1em"
              viewBox="0 0 20 20"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M18.4192 14.0993L11.3203 10.0007L18.4182 5.90272C18.734 5.72042 18.8421 5.31666 18.6598 5.00092C18.4775 4.68519 18.0738 4.57692 17.758 4.7593L10.6596 8.85755V0.660171C10.6596 0.29558 10.364 0 9.99946 0C9.63487 0 9.33929 0.29558 9.33929 0.660171V8.85694L2.24193 4.7593C1.92619 4.57683 1.52243 4.68519 1.34013 5.00092C1.15784 5.31666 1.26602 5.72042 1.58176 5.90272L8.67965 10.0007L1.58079 14.0993C1.26505 14.2816 1.15687 14.6854 1.33916 15.0011C1.46143 15.2129 1.68333 15.3313 1.91149 15.3313C2.02354 15.3313 2.137 15.3028 2.24096 15.2427L9.33938 11.1445V19.3398C9.33938 19.7044 9.63496 20 9.99955 20C10.3641 20 10.6597 19.7044 10.6597 19.3398V11.1439L17.7591 15.2427C17.8631 15.3028 17.9766 15.3313 18.0886 15.3313C18.3167 15.3313 18.5386 15.2128 18.6609 15.0011C18.8432 14.6853 18.735 14.2816 18.4192 14.0993Z"
                fill="currentColor"
              />
            </svg>
          </span>
          <label
            class="e1nbkkrq-el-label"
            for="test-static-id"
          >
            This application is free
          </label>
          <p
            class="e19twfs3-el-input-error"
          >
            An Error
          </p>
        </div>
      </div>
      <div
        class="e1ksxx4v-el-input-wrap"
      >
        <div
          class="e1979rmu-el-input-group"
        >
          <label
            class="e1nbkkrq-el-label"
          >
            Category
          </label>
          <select
            class="e60u3kb-el-select"
          >
            <option
              value=""
            >
              Select Option
            </option>
            <option
              value="MOCK_ID"
            >
              MOCK_DESCRIPTION
            </option>
          </select>
          <p
            class="e19twfs3-el-input-error"
          >
            An Error
          </p>
        </div>
      </div>
      <div
        class="ep31he9-el-input-wrap-full"
      >
        <div
          class="e1979rmu-el-input-group"
        >
          <input
            class="e1urjlvd-el-input"
            id="test-static-id"
            name="summary"
            placeholder="A short strapline summary for your app listing. Must be between 50 and 150 characters"
          />
          <span
            class="e1vxext9-el-intent-danger ej9yrfo-el-icon"
          >
            <svg
              fill="none"
              height="1em"
              viewBox="0 0 20 20"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M18.4192 14.0993L11.3203 10.0007L18.4182 5.90272C18.734 5.72042 18.8421 5.31666 18.6598 5.00092C18.4775 4.68519 18.0738 4.57692 17.758 4.7593L10.6596 8.85755V0.660171C10.6596 0.29558 10.364 0 9.99946 0C9.63487 0 9.33929 0.29558 9.33929 0.660171V8.85694L2.24193 4.7593C1.92619 4.57683 1.52243 4.68519 1.34013 5.00092C1.15784 5.31666 1.26602 5.72042 1.58176 5.90272L8.67965 10.0007L1.58079 14.0993C1.26505 14.2816 1.15687 14.6854 1.33916 15.0011C1.46143 15.2129 1.68333 15.3313 1.91149 15.3313C2.02354 15.3313 2.137 15.3028 2.24096 15.2427L9.33938 11.1445V19.3398C9.33938 19.7044 9.63496 20 9.99955 20C10.3641 20 10.6597 19.7044 10.6597 19.3398V11.1439L17.7591 15.2427C17.8631 15.3028 17.9766 15.3313 18.0886 15.3313C18.3167 15.3313 18.5386 15.2128 18.6609 15.0011C18.8432 14.6853 18.735 14.2816 18.4192 14.0993Z"
                fill="currentColor"
              />
            </svg>
          </span>
          <label
            class="e1nbkkrq-el-label"
            for="test-static-id"
          >
            Summary
          </label>
          <p
            class="e19twfs3-el-input-error"
          >
            An Error
          </p>
        </div>
      </div>
      <div
        class="ep31he9-el-input-wrap-full"
      >
        <label
          class="e1nbkkrq-el-label"
        >
          Description
        </label>
        <div />
        <p
          class="e19twfs3-el-input-error"
        >
          An Error
        </p>
      </div>
      <div
        class="e1ksxx4v-el-input-wrap"
      >
        <div />
        <p
          class="e19twfs3-el-input-error"
        >
          An Error
        </p>
      </div>
      <div
        class="e1ksxx4v-el-input-wrap"
      >
        <div />
        <p
          class="e19twfs3-el-input-error"
        >
          An Error
        </p>
      </div>
      <div
        class="e1ksxx4v-el-input-wrap"
      >
        <div />
        <p
          class="e19twfs3-el-input-error"
        >
          An Error
        </p>
      </div>
      <div
        class="e1ksxx4v-el-input-wrap"
      >
        <div />
        <p
          class="e19twfs3-el-input-error"
        >
          An Error
        </p>
      </div>
      <div
        class="e1ksxx4v-el-input-wrap"
      >
        <div />
        <p
          class="e19twfs3-el-input-error"
        >
          An Error
        </p>
      </div>
      <div
        class="e1ksxx4v-el-input-wrap"
      >
        <div />
        <p
          class="e19twfs3-el-input-error"
        >
          An Error
        </p>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
